--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    >
-<TextView  
-    android:layout_width="fill_parent" 
-    android:layout_height="wrap_content" 
-    android:text="@string/hello"
-    />
+              android:layout_width="fill_parent" 
+              android:layout_height="fill_parent"
+              android:orientation="vertical" >
+    <TextView android:id="@+id/test"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:text="Stappenteller. This is me." />
+    <Button android:id="@+id/close" 
+            android:text="Quit" 
+            android:layout_width="wrap_content" 
+            android:layout_height="wrap_content" />
 </LinearLayout>
