--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -13,7 +13,12 @@
                        manier kunnen aansturen. -->
     <!-- De onderstaande button mag je naar eigen goeddunken plaatsen in een
          (andere) container, zorg er gewoon voor dat ze zichtbaar blijft zodat
-         je de applicatie netjes kunt afsluiten als je Opgave 2 hebt gemaakt. -->                       
+         je de applicatie netjes kunt afsluiten als je Opgave 2 hebt gemaakt. -->
+    <!-- Spinner voor de verschillende detectoren -->
+    <Spinner android:id="@+id/detectorList"
+              android:layout_width="fill_parent"
+              android:layout_height="wrap_content"
+              android:prompt="@string/detector_prompt" />                       
     <Button android:id="@+id/quit" 
             android:text="Quit" 
             android:layout_width="wrap_content" 
